[project]
name = "northlighttools"
version = "1.2.0"
description = ""
authors = [
    {name = "Marek Grzyb",email = "marek@grzyb.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "polib @ git+https://github.com/GrzybDev/polib.git@state-machine-fix",
    "numpy (>=2.3.4,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "humanize (>=4.14.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "northlighttools", from = "src"}]

[tool.poetry.scripts]
northlighttools = "northlighttools:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
