[project]
name = "northlighttools"
version = "1.2.1"
description = "Collection of various tools for Northlight Engine used for Polish fan translation of Quantum Break!"
authors = [
    {name = "Marek Grzyb",email = "marek@grzyb.dev"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE.md",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.1",
    "polib",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "humanize>=4.15.0",
]

[tool.uv]
package = true

[tool.uv.sources]
polib = { git = "https://github.com/GrzybDev/polib.git", branch = "state-machine-fix" }

[project.scripts]
northlighttools = "northlighttools:app"
