[project]
name = "northlighttools"
version = "1.3.0"
description = "Collection of various tools for Northlight Engine used for Polish fan translation of Quantum Break!"
authors = [
    {name = "Marek Grzyb",email = "marek@grzyb.dev"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE.md",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.1",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "humanize>=4.15.0",
    "translate-toolkit>=3.19.2",
]

[tool.uv]
package = true

[project.scripts]
northlighttools = "northlighttools:app"
